lesson-16/deploy-svc-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java
  labels:
    app: java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
      - name: java
        image: dvorkinguy/simple-flask-app:3.1.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: java
spec:
  selector:
    app: java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
