lesson-16/deploy-svc-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
  labels:
    app: simple
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
      - name: simple
        image: dvorkinguy/simple-flask-app:3.1.0
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: simple
spec:
  selector:
    app: simple
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
